--- a/selectores.html
+++ b/selectores.html
@@ -115,7 +115,7 @@
     </section>
 
     <footer>
-        <h3> Esta pagina fue desarrollada por </h3>
+        <h3> Esta pagina fue desarrollada por:</h3>
         <p>
             jesica ibañez <br>
             fecha de actualizacion : 08/09/2023<br>
